--- a/src/main/resources/static/css/photoBoard.css
+++ b/src/main/resources/static/css/photoBoard.css
@@ -758,7 +758,7 @@
 .card-detail-card-image {
     position: relative;
     display: block;
-    background-color: #ededed;
+    background-color: #ffffff;
     overflow: hidden
 }
 
