--- a/src/main/resources/templates/th/photoBoard/photoBoardList.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardList.html
@@ -8,6 +8,15 @@
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
+    <script type="text/javascript">
+
+            var userId = $('#userId').text();
+            console.log(userId);
+            document.frm.userId.value=userId;
+
+            $("#frm").submit();
+
+    </script>
 </head>
 <body>
 <div layout:fragment="content">
@@ -18,19 +27,22 @@
     <div class="virtualized-list row" style="padding-top:0px; transform: translateY(0px);">
         <tr th:each="photo : ${photoList}">
             <div class="col-6 col-md-3 product-item-wrap">
-                <form th:action="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}">
-                <article class="production-item"><a class="production-item__overlay" th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}"></a>
+                <form th:action="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}" method="post" id="frm" name="frm">
+                <article class="production-item"><a class="production-item__overlay" <!--th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}"-->></a>
                     <div class="production-item-image production-item__image">
                         <img class="image" alt="" th:src="@{'/uploadImg'+${photo.photoImg1}}" srcset="">
-                        <input type="hidden" id="userId" name="userId" th:value="${photo.memberId}"/>
+                        <input type="hidden" id="userId" name="userId" th:text="${photo.memberId}"/>
+                        <!--<input type="hidden" id="userId" name="userId" value=""/>-->
                     </div>
+
                     <div class="production-item__content">
                         <h1 class="production-item__header">
                             <span class="production-item__header__name" th:text="${photo.photoTitle}"></span>
                         </h1>
                     </div>
+
                 </article>
-                </form>
+                <!--</form>-->
             </div>
         </tr>
     </div>
