--- a/src/main/resources/templates/th/main/storeNewBest.html
+++ b/src/main/resources/templates/th/main/storeNewBest.html
@@ -20,12 +20,9 @@
         <div class="ranking-feed" id="ranking-type-filter">
             <ol class="ranking-type-filter">
                 <a th:href="@{/storeBest}">
-                    <li class="nav-link active ranking-type-filter__item ranking-type-filter__item--left"
-                        data-toggle="tab">역대판매 베스트</li></a>
+                    <li class="nav-link active ranking-type-filter__item ranking-type-filter__item--left">역대판매 베스트</li></a>
                 <a th:href="@{/storeNewBest}">
-                   <li class="nav-link ranking-type-filter__item ranking-type-filter__item--right right--active"
-                       data-toggle="tab">신제품 베스트</li></a>
-                </li>
+                   <li class="nav-link ranking-type-filter__item ranking-type-filter__item--right right--active">신제품 베스트</li></a>
             </ol>
             <div class="virtualized-list ranking-feed__content row" id="newBest"
                  style="padding-top: 0px; transform: translateY(0px);">
