--- a/src/main/resources/static/css/basicComponent.css
+++ b/src/main/resources/static/css/basicComponent.css
@@ -1,3 +1,5 @@
+
+
 .container {
     margin-right: auto;
     margin-left: auto;
@@ -5,7 +7,8 @@
     width: calc(100% - 30px);
     max-width: 100%;
     box-sizing: border-box;
-    min-height: 1px
+    min-height: 1px;
+    margin-top: 5px;
 }
 
 @media (min-width: 375px) {
@@ -1166,7 +1169,7 @@ textarea.form-control {
     outline-width: initial
 }
 
-html, body {
+html {
     line-height: 1;
     font-family: "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
     -webkit-font-smoothing: antialiased;
