--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,13 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
+@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+.searchBar{
+    margin-top: 5px;
+    margin-right: 10px;
+}
+.logo-font {
+    font-family: "Black Han Sans";
+    font-size: 25px;
+}
 body {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-family: 'Noto Sans KR', 'Montserrat', Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100%;
     margin: 0;
 }
-
+.sub-font{
+    font-size: 17px;
+}
 .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0;
@@ -20,7 +32,6 @@ body {
 
 .navbar a {
     display:inline-block;
-    font-size: 15px;
     color: black;
     padding: 10px 10px;
     text-decoration: none;
