--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -158,7 +158,7 @@
                     <div class="card mb-3" th:each="reviews:${reviewList}" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-2">
-                                <img th:src="@{'/uploadImg/'+${product.reviewImg1}}" class="card-img" alt="...">
+                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="card-img" alt="...">
                                 <img src="..." class="card-img" alt="...">
                                 <img src="..." class="card-img" alt="...">
                             </div>
