--- a/src/main/resources/templates/th/seller/category.html
+++ b/src/main/resources/templates/th/seller/category.html
@@ -139,18 +139,18 @@
                                                 <input type="text" class="form-control" name="modelName" id="modelName"
                                                        placeholder="modelName">
                                             </div>
-                                            <div class="form-group col-md-6">
+                                            <div class="form-group col-md-6" th:each="sellerInfo : ${sellerInfo}">
                                                 <label for="sellerName">업체명</label>
                                                 <input type="text" class="form-control" name="sellerName"
                                                        id="sellerName"
-                                                       placeholder="sellerName" readonly>
+                                                       th:value="${sellerInfo.sellerName}" readonly>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="form-group col-md-6">
-                                                <label for="customPrice">판매가</label>
-                                                <input type="text" class="form-control" name="customPrice"
-                                                       id="customPrice"
+                                                <label for="customerPrice">판매가</label>
+                                                <input type="text" class="form-control" name="customerPrice"
+                                                       id="customerPrice"
                                                        placeholder="customPrice">
                                             </div>
                                             <div class="form-group col-md-6">
