06/30 minjong push3 상품리스트 작업중

--- a/src/main/resources/templates/th/fragments/sellerHeader.html
+++ b/src/main/resources/templates/th/fragments/sellerHeader.html
@@ -33,7 +33,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" th:href="@{/seller/category}">상품등록</a>
-                                    <a class="dropdown-item" th:href="@{/}">상품리스트</a>
+                                    <a class="dropdown-item" th:href="@{/seller/productList}">상품리스트</a>
                                 </div>
 
 
