--- a/src/main/resources/templates/th/seller/category.html
+++ b/src/main/resources/templates/th/seller/category.html
@@ -43,7 +43,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/seller/category}" class="nav-link">
+                                        <a th:href="@{/seller/productList}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>상품 리스트</p>
                                         </a>
@@ -245,14 +245,15 @@
                                     <div class="col-md-12" style="text-align: center;">
                                         <img id="ExpImgView" class="col-md-12 mb-3">
                                     </div>
+                                    <div>
+                                        <button type="submit" class="btn btn-info mr-4 mb-4" style="float:right;">
+                                            상품 등록
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <button type="submit" class="btn btn-info" style="float:right;">
-                                수정
-                            </button>
-                        </div>
+
 
                     </div>
                 </section>
