--- a/src/main/resources/templates/th/askBoard/askBoardInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardInsert.html
@@ -8,7 +8,7 @@
 
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" th:src="@{/editor/js/HuskyEZCreator.js}" charset="utf-8"></script>
-    <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
+    <script type="text/javascript" th:src="@{/js/askBoard.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
