--- a/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
@@ -17,7 +17,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-8 card-detail__content">
-                    <header class="card-detail-header"></header>
+                    <header class="card-detail-header">
+                        <div class="card-detail-header__prop-list">
+                            <span class="card-detail-header__prop" th:text="${photodetail?.areaType}">&nbsp;</span>
+                            <span class="card-detail-header__prop" th:text="${photodetail?.houseType}">&nbsp;</span>
+                            <span class="card-detail-header__prop" th:text="${photodetail?.styleType}">&nbsp;</span>
+                            <span class="card-detail-header__prop" th:text="${photodetail?.placeType}">&nbsp;</span>
+                        </div>
+                        <div class="card-detail-header__date">
+                            <button th:if="${member.memberId} == ${photodetail.memberId}"
+                                    class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                                    id="photoup" name="photoup"
+                                    th:onclick="'javascript:update('+${photodetail.photoBoardNo}+');'" type="button">수정</button>
+                            <button class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                                    th:if="${member.memberId} == ${photodetail.memberId}" id="photodel" name="photodel"
+                                    th:onclick="'javascript:del('+${photodetail.photoBoardNo}+');'">삭제</button>
+                        </div>
+                    </header>
                     <article class="card-detail-card">
                         <div class="card-detail-card-image-wrap card-detail-card__image">
                             <div class="card-detail-card-image" style="padding-bottom: 100%;">
@@ -27,28 +43,28 @@
                     </article>
                     <article class="card-detail-card">
                         <div class="card-detail-card-image-wrap card-detail-card__image">
-                            <div class="card-detail-card-image" style="padding-bottom: 100%;">
+                            <div class="card-detail-card-image" style="padding-bottom: 70%;">
                                 <img class="card-detail-card-image__image" th:if="${photodetail.photoImg2 != null}" th:src="'/uploadImg'+${photodetail?.photoImg2}" style="width: 500px; height: 500px;"/>
                             </div>
                         </div>
                     </article>
                     <article class="card-detail-card">
                         <div class="card-detail-card-image-wrap card-detail-card__image">
-                            <div class="card-detail-card-image" style="padding-bottom: 100%;">
+                            <div class="card-detail-card-image" style="padding-bottom: 70%;">
                                 <img class="card-detail-card-image__image" th:if="${photodetail.photoImg3 != null}" th:src="'/uploadImg'+${photodetail?.photoImg3}" style="width: 500px; height: 500px;"/>
                             </div>
                         </div>
                     </article>
                     <article class="card-detail-card">
                         <div class="card-detail-card-image-wrap card-detail-card__image">
-                            <div class="card-detail-card-image" style="padding-bottom: 100%;">
+                            <div class="card-detail-card-image" style="padding-bottom: 70%;">
                                 <img class="card-detail-card-image__image" th:if="${photodetail.photoImg4 != null}" th:src="'/uploadImg'+${photodetail?.photoImg4}" style="width: 500px; height: 500px;"/>
                             </div>
                         </div>
                     </article>
                     <article class="card-detail-card">
                         <div class="card-detail-card-image-wrap card-detail-card__image">
-                            <div class="card-detail-card-image" style="padding-bottom: 100%;">
+                            <div class="card-detail-card-image" style="padding-bottom: 70%;">
 
                                 <img class="card-detail-card-image__image" th:if="${photodetail.photoImg5 != null}" th:src="'/uploadImg'+${photodetail?.photoImg5}" style="width: 500px; height: 500px;"/>
                             </div>
@@ -120,19 +136,33 @@
                              style="position: sticky; top: 131px;">
                             <div class="sticky-child card-detail-sidebar__inner" style="position: relative; box-sizing: border-box; height: 838px;">
                                 <div class="card-detail-sidebar__action-list">
-                                    <button class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" type="button">
+                                    <button th:if="${likestat == 0}" class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" id="like" type="button">
                                         <svg class="icon icon--stroke" aria-label="좋아요" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
                                             <path d="M23.22 7.95c.4 4.94-2.92 9.71-10.92 13.85a.47.47 0 0 1-.42 0C3.88 17.66.56 12.9.96 7.93 1.54 2.48 8.28.3 12.1 4.7c3.8-4.4 10.55-2.22 11.13 3.25z"></path>
                                         </svg>
                                         <!-- 좋아요 개수 -->
-                                        <span class="count">35</span>
+                                        <span class="count" th:text="${photodetail?.likeCount}"></span>
                                     </button>
-                                    <button class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" type="button">
+                                    <button th:if="${likestat == 1}" class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item card-item card-detail-sidebar__action-item--active" id="cancellike" type="button">
+                                        <svg class="icon icon--stroke" aria-label="좋아요 취소" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                            <path d="M23.22 7.95c.4 4.94-2.92 9.71-10.92 13.85a.47.47 0 0 1-.42 0C3.88 17.66.56 12.9.96 7.93 1.54 2.48 8.28.3 12.1 4.7c3.8-4.4 10.55-2.22 11.13 3.25z"></path>
+                                        </svg>
+                                        <!-- 좋아요 개수 -->
+                                        <span class="count" th:text="${photodetail?.likeCount}"></span>
+                                    </button>
+                                    <button th:if="${scrapstat == 0}" class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" id="scrap" type="button">
                                         <svg class="icon icon--stroke" aria-label="스크랩" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
                                             <path d="M11.53 18.54l-8.06 4.31A1 1 0 0 1 2 21.97V3.5A1.5 1.5 0 0 1 3.5 2h17A1.5 1.5 0 0 1 22 3.5v18.47a1 1 0 0 1-1.47.88l-8.06-4.31a1 1 0 0 0-.94 0z"></path>
                                         </svg>
                                         <!-- 스크랩 개수-->
-                                        <span class="count">25</span>
+                                        <span class="count" th:text="${photodetail?.scrapCount}"></span>
+                                    </button>
+                                    <button th:if="${scrapstat == 1}" class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item card-detail-sidebar__action-item--active" id="cancelscrap" type="button">
+                                        <svg class="icon icon--stroke" aria-label="스크랩 취소" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                            <path d="M11.53 18.54l-8.06 4.31A1 1 0 0 1 2 21.97V3.5A1.5 1.5 0 0 1 3.5 2h17A1.5 1.5 0 0 1 22 3.5v18.47a1 1 0 0 1-1.47.88l-8.06-4.31a1 1 0 0 0-.94 0z"></path>
+                                        </svg>
+                                        <!-- 스크랩 개수-->
+                                        <span class="count" th:text="${photodetail?.scrapCount}"></span>
                                     </button>
                                 </div>
                                 <div class="card-detail-sidebar__content">
@@ -150,7 +180,15 @@
                                                 <span class="card-detail-writer__name" th:text="${photodetail.memberId}"></span>
                                             </a>
                                         </div>
-                                        <button class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow" type="button">쪽지보내기</button>
+                                        <form action="/member/noteSending" method="post" id="sending" name="sending">
+                                            <button type="button" th:if="${member.memberId} != ${photodetail.memberId}"
+                                                    class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                                                    id="notesend" name="notesend" >쪽지보내기</button>
+
+                                            <input type="hidden" id="memberId" name="memberId" th:value="${photodetail.memberId}">
+                                            <input type="hidden" id="receiveId" name="receiveId" value=""/>
+                                        </form>
+
                                     </div>
                                     <div class="card-detail-pc-related-card-list">
                                         <ul class="card-detail-pc-related-card-list__list" >
