--- a/src/main/resources/templates/th/fragments/adminHeader.html
+++ b/src/main/resources/templates/th/fragments/adminHeader.html
@@ -7,8 +7,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 xs-12 md-auto">
                 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
-                    <a class="navbar-brand" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width=50px
-                                                          height=50px /> <b> TheHouse</b></a>
+                    <a class="navbar-brand logo-font" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width=50px
+                                                          height=50px /> <b>니가사는그집</b></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +19,13 @@
                         <ul class="navbar-nav ml-auto">
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link" th:href="@{/admin/statAdmin}" id="navbarDropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link" th:href="@{/admin/spendingPattern}" id="navbarDropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">회원관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원소비패턴</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원정보</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원주문내역</a>
+                                    <a class="dropdown-item" th:href="@{/admin/spendingPattern}">회원소비패턴</a>
+                                    <a class="dropdown-item" th:href="@{/admin/memberInfo}">회원정보</a>
+                                    <a class="dropdown-item" th:href="@{/admin/memberOrderList}">회원주문내역</a>
                                     <a class="dropdown-item" th:href="@{/admin/chatList}">채팅</a>
                                     <a class="dropdown-item" th:href="@{/admin/training}">추천트레이닝</a>
                                 </div>
@@ -35,11 +35,9 @@
                                    aria-expanded="false">제품관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">제품등록내역</a>
+                                    <a class="dropdown-item" th:href="@{/admin/productManagement}">제품등록내역</a>
                                     <a class="dropdown-item" th:href="@{/admin/}">제품판매관리</a>
                                 </div>
-
-
                             </li>
 
                             <li class="nav-item dropdown">
@@ -54,14 +52,6 @@
                         </ul>
 
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/basket}">
-                                    <span class="asdf" style="font-size: 16px; color: black;">
-                                        <i class="fas fa-shopping-cart"> 장바구니</i>
-                                    </span>
-                                </a>
-                            </li>
-
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">
                                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>
                             </form>
