--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -85,7 +85,7 @@
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/member/myBoard}">
                                 <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
                             </form>
-                            <form class="form-inline my-2 my-lg-0" th:action="@{/admin/statAdmin}">
+                            <form class="form-inline my-2 my-lg-0" th:action="@{/admin/spendingPattern}">
                                 <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" th:action="@{/seller/sellerInfo}">
