--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -14,7 +14,7 @@
 <body>
 
 <div layout:fragment="content">
-
+<div class="container">
     <div id="name" >
         Total 유저별 구매금액
 
@@ -28,6 +28,7 @@
         </div>
         <div id="field">
         </div>
+
         <!-- 차트 지우고 다시 만들어아햐나? -->
         <script th:inline="javascript" type="text/javascript">
             var jsonData;
@@ -229,6 +230,7 @@
 
         </script>
     </div>
+</div>
 </div>
 
 </body>
